"updated call to deprecated method"